Fixed the films search form, minor issue(z-index)

--- a/client/src/app/styles/films.css
+++ b/client/src/app/styles/films.css
@@ -15,7 +15,7 @@
     padding: 1rem;
     top: 0;
     position: sticky;
-    z-index: -10;
+    z-index: 10;
     background: rgba(37, 35, 35, 0.4);
     border-radius: 10px;
     color: white;
